--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -6,6 +6,11 @@ button.signUp=Sign up
 button.submitChanges=Submit changes
 button.back=Back
 button.logOut=Log out
+button.edit=Edit
+button.addTest=Add test
+button.editTest=Edit test
+button.deleteTest=Delete test
+button.submit=Submit
 
 registration-form.signIn.label=Sign in
 registration-form.signUp.label=Sign up
@@ -23,23 +28,55 @@ registration-form.logIn.button=Log in
 registration-form.signUp.button=Sign up
 
 profile.label=Profile
-edit-profile.button=Edit profile
 
-user-main.tab.tests=Tests
-user-main.tab.passedTests=Passed tests
+tab.users=Users
+tab.tests=Tests
+tab.passedTests=Passed tests
+
 user-main.sortBy.label=Sort by
 user-main.sortBy.name=Name
 user-main.sortBy.difficulty=Difficulty
 user-main.sortBy.numOfQuestions=Number of queries
 user-main.onPartSubj.label=On particular subject
-user-main.testCard.difficulty.label=Difficulty
-user-main.testCard.duration.label=Duration
-user-main.testCard.numOfQuest.label=Number of questions
-user-main.testCard.button.startTest=Start test
-user-main.testCard.button.continue=Continue
-user-main.testCard.button.passed=Passed
-user-main.testCard.startingTime.label=Starting time
-user-main.testCard.endingTime.label=Ending time
-user-main.testCard.result.label=Result
-user-main.testCard.notEnded=Not ended
+
+test-card.subject.label=Subject
+test-card.subject.placeholder=Enter subject
+testCard.difficulty.label=Difficulty
+testCard.duration.label=Duration
+testCard.numOfQuest.label=Number of questions
+testCard.button.startTest=Start test
+testCard.button.continue=Continue
+testCard.button.passed=Passed
+testCard.startingTime.label=Starting time
+testCard.endingTime.label=Ending time
+testCard.result.label=Result
+testCard.notEnded=Not ended
+testCard.minutes=min
+testCard.difficulty.easy=easy
+testCard.difficulty.medium=medium
+testCard.difficulty.hard=hard
+
+test-passing.button.endAttempt=End the attempt
+test-passing.button.allTests=All tests
+test-passing.question.label=Question
+
+
+user-card.role.label=Role
+user-card.status.label=Status
+user-card.editUser.button=Edit user
+user-card.block.button=Block
+user-card.unblock.button=Unblock
+user-card.role.client=client
+user-card.role.admin=admin
+user-card.status.active=active
+user-card.status.blocked=blocked
+
+add-test.addAmountOfQuestions=Amount of questions you would like to add
+
+add-questions.answers.label=Answers
+add-questions.question.placeholder=Write your question
+add-questions.answer.placeholder=Write your answer
+
+
+
 
