--- a/src/main/resources/locales_ua.properties
+++ b/src/main/resources/locales_ua.properties
@@ -6,6 +6,11 @@ button.signUp=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430
 button.submitChanges=\u0412\u0456\u0434\u043f\u0440\u0430\u0432\u0438\u0442\u0438 \u0437\u043c\u0456\u043d\u0438
 button.back=\u041f\u043e\u0432\u0435\u0440\u043d\u0443\u0442\u0438\u0441\u044c
 button.logOut=\u0412\u0438\u0439\u0442\u0438
+button.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+button.addTest=\u0414\u043e\u0434\u0430\u0442\u0438 \u0442\u0435\u0441\u0442
+button.editTest=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+button.deleteTest=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
+button.submit=\u0412\u0456\u0434\u043f\u0440\u0430\u0432\u0438\u0442\u0438
 
 registration-form.signIn.label=\u0412\u0445\u0456\u0434
 registration-form.signUp.label=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f
@@ -23,22 +28,50 @@ registration-form.logIn.button=\u0423\u0432\u0456\u0439\u0442\u0438
 registration-form.signUp.button=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044c
 
 profile.label=\u041f\u0440\u043e\u0444\u0456\u043b\u044c
-edit-profile.button=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 
-user-main.tab.tests=\u0422\u0435\u0441\u0442\u0438
-user-main.tab.passedTests=\u0421\u043a\u043b\u0430\u0434\u0435\u043d\u0456 \u0442\u0435\u0441\u0442\u0438
+tab.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
+tab.tests=\u0422\u0435\u0441\u0442\u0438
+tab.passedTests=\u0421\u043a\u043b\u0430\u0434\u0435\u043d\u0456 \u0442\u0435\u0441\u0442\u0438
+
 user-main.sortBy.label=\u0421\u043e\u0440\u0442\u0443\u0432\u0430\u0442\u0438 \u0437\u0430
 user-main.sortBy.name=\u0406\u043c\u0027\u044f\u043c
 user-main.sortBy.difficulty=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044e
 user-main.sortBy.numOfQuestions=\u041a\u002d\u0442\u044e \u043f\u0438\u0442\u0430\u043d\u044c
 user-main.onPartSubj.label=\u0413\u0440\u0443\u043f\u0443\u0432\u0430\u0442\u0438 \u0437\u0430 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u043e\u043c
-user-main.testCard.difficulty.label=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044c
-user-main.testCard.duration.label=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c
-user-main.testCard.numOfQuest.label=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044c
-user-main.testCard.button.startTest=\u041f\u043e\u0447\u0430\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
-user-main.testCard.button.continue=\u041f\u0440\u043e\u0434\u043e\u0432\u0436\u0438\u0442\u0438
-user-main.testCard.button.passed=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
-user-main.testCard.startingTime.label=\u0427\u0430\u0441 \u043f\u043e\u0447\u0430\u0442\u043a\u0443
-user-main.testCard.endingTime.label=\u0427\u0430\u0441 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043d\u044f
-user-main.testCard.result.label=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
-user-main.testCard.notEnded=\u041d\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
+
+test-card.subject.label=\u041f\u0440\u0435\u0434\u043c\u0435\u0442
+test-card.subject.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0440\u0435\u0434\u043c\u0435\u0442
+testCard.difficulty.label=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044c
+testCard.duration.label=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c
+testCard.numOfQuest.label=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044c
+testCard.button.startTest=\u041f\u043e\u0447\u0430\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
+testCard.button.continue=\u041f\u0440\u043e\u0434\u043e\u0432\u0436\u0438\u0442\u0438
+testCard.button.passed=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
+testCard.startingTime.label=\u0427\u0430\u0441 \u043f\u043e\u0447\u0430\u0442\u043a\u0443
+testCard.endingTime.label=\u0427\u0430\u0441 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043d\u044f
+testCard.result.label=\u0420\u0435\u0437\u0443\u043b\u044c\u0442\u0430\u0442
+testCard.notEnded=\u041d\u0435 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
+testCard.minutes=\u0445\u0432
+testCard.difficulty.easy=\u043d\u0438\u0437\u044c\u043a\u0430
+testCard.difficulty.medium=\u0441\u0435\u0440\u0435\u0434\u043d\u044f
+testCard.difficulty.hard=\u0432\u0438\u0441\u043e\u043a\u0430
+
+test-passing.button.endAttempt=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
+test-passing.button.allTests=\u0412\u0441\u0456 \u0442\u0435\u0441\u0442\u0438
+test-passing.question.label=\u041f\u0438\u0442\u0430\u043d\u043d\u044f
+
+user-card.role.label=\u0420\u043e\u043b\u044c
+user-card.status.label=\u0421\u0442\u0430\u0442\u0443\u0441
+user-card.editUser.button=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+user-card.block.button=\u0417\u0430\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
+user-card.unblock.button=\u0420\u043e\u0437\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
+user-card.role.client=\u043a\u043b\u0456\u0454\u043d\u0442
+user-card.role.admin=\u0430\u0434\u043c\u0456\u043d\u0456\u0441\u0442\u0440\u0430\u0442\u043e\u0440
+user-card.status.active=\u0430\u043a\u0442\u0438\u0432\u043d\u0438\u0439
+user-card.status.blocked=\u0437\u0430\u0431\u043b\u043e\u043a\u043e\u0432\u0430\u043d\u0438\u0439
+
+add-test.addAmountOfQuestions=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u0437\u0430\u043f\u0438\u0442\u0430\u043d\u044c\u002c \u044f\u043a\u0443 \u0432\u0438 \u0445\u043e\u0447\u0435\u0442\u0435 \u0434\u043e\u0434\u0430\u0442\u0438
+
+add-questions.answers.label=\u0412\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456
+add-questions.question.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044f
+add-questions.answer.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u044c
