--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -1,6 +1,6 @@
 lang=ENG
 
-main-page.content=Testing platform
+mainPage.content=Testing platform
 button.signIn=Sign in
 button.signUp=Sign up
 button.submitChanges=Submit changes
@@ -9,23 +9,29 @@ button.logOut=Log out
 button.edit=Edit
 button.addTest=Add test
 button.editTest=Edit test
-button.deleteTest=Delete test
+button.delete=Delete
 button.submit=Submit
 
-registration-form.signIn.label=Sign in
-registration-form.signUp.label=Sign up
-registration-form.login.label=Login
-registration-form.login.placeholder=Enter login
-registration-form.password.label=Password
-registration-form.password.placeholder=Enter password
-registration-form.name.label=Name
-registration-form.name.placeholder=Enter mame
-registration-form.surname.label=Surname
-registration-form.surname.placeholder=Enter surname
-registration-form.email.label=Email
-registration-form.email.placeholder=Enter email
-registration-form.logIn.button=Log in
-registration-form.signUp.button=Sign up
+validation.fillThisField=Fill this field
+validation.noSuchUser=No such user
+validation.signUpSuccess=Sign up success. Sign in
+validation.loginAlreadyInUser=Login already in use
+validation.badEmail=Bad email format
+
+registrationForm.signIn.label=Sign in
+registrationForm.signUp.label=Sign up
+registrationForm.login.label=Login
+registrationForm.login.placeholder=Enter login
+registrationForm.password.label=Password
+registrationForm.password.placeholder=Enter password
+registrationForm.name.label=Name
+registrationForm.name.placeholder=Enter name
+registrationForm.surname.label=Surname
+registrationForm.surname.placeholder=Enter surname
+registrationForm.email.label=Email
+registrationForm.email.placeholder=Enter email
+registrationForm.logIn.button=Log in
+registrationForm.signUp.button=Sign up
 
 profile.label=Profile
 
@@ -33,14 +39,14 @@ tab.users=Users
 tab.tests=Tests
 tab.passedTests=Passed tests
 
-user-main.sortBy.label=Sort by
-user-main.sortBy.name=Name
-user-main.sortBy.difficulty=Difficulty
-user-main.sortBy.numOfQuestions=Number of queries
-user-main.onPartSubj.label=On particular subject
+userMain.sortBy.label=Sort by
+userMain.sortBy.name=Name
+userMain.sortBy.difficulty=Difficulty
+userMain.sortBy.numOfQuestions=Number of queries
+userMain.onPartSubj.label=On particular subject
 
-test-card.subject.label=Subject
-test-card.subject.placeholder=Enter subject
+testCard.subject.label=Subject
+testCard.subject.placeholder=Enter subject
 testCard.difficulty.label=Difficulty
 testCard.duration.label=Duration
 testCard.numOfQuest.label=Number of questions
@@ -56,27 +62,34 @@ testCard.difficulty.easy=easy
 testCard.difficulty.medium=medium
 testCard.difficulty.hard=hard
 
-test-passing.button.endAttempt=End the attempt
-test-passing.button.allTests=All tests
-test-passing.question.label=Question
+testPassing.button.endAttempt=End the attempt
+testPassing.button.allTests=All tests
+testPassing.question.label=Question
 
+userCard.role.label=Role
+userCard.status.label=Status
+userCard.editUser.button=Edit user
+userCard.block.button=Block
+userCard.unblock.button=Unblock
+userCard.role.client=client
+userCard.role.admin=admin
+userCard.status.active=active
+userCard.status.blocked=blocked
 
-user-card.role.label=Role
-user-card.status.label=Status
-user-card.editUser.button=Edit user
-user-card.block.button=Block
-user-card.unblock.button=Unblock
-user-card.role.client=client
-user-card.role.admin=admin
-user-card.status.active=active
-user-card.status.blocked=blocked
+addTest.addAmountOfQuestions=Amount of questions you would like to add
+addTest.enterTestInfo.label=Please enter test info
 
-add-test.addAmountOfQuestions=Amount of questions you would like to add
+addQuestions.answers.label=Answers
+addQuestions.question.placeholder=Write your question
+addQuestions.answer.placeholder=Write your answer
+addQuestions.grade.label=Grade
 
-add-questions.answers.label=Answers
-add-questions.question.placeholder=Write your question
-add-questions.answer.placeholder=Write your answer
-
+testInfo.label=Test info
+testInfo.amountOfQuestionsInTheTest=Amount of questions in the test
+testInfo.text.label=Text
+testInfo.maxScore.label=Max score
+testInfo.addQuestions.button=Add questions
+testInfo.questions.label=Questions
 
 
 
