--- a/src/main/resources/locales_ua.properties
+++ b/src/main/resources/locales_ua.properties
@@ -1,6 +1,6 @@
 lang=UA
 
-main-page.content=\u041f\u043b\u0430\u0442\u0444\u043e\u0440\u043c\u0430 \u0434\u043b\u044f \u0442\u0435\u0441\u0442\u0443\u0432\u0430\u043d\u043d\u044f
+mainPage.content=\u041f\u043b\u0430\u0442\u0444\u043e\u0440\u043c\u0430 \u0434\u043b\u044f \u0442\u0435\u0441\u0442\u0443\u0432\u0430\u043d\u043d\u044f
 button.signIn=\u0423\u0432\u0456\u0439\u0442\u0438
 button.signUp=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044c
 button.submitChanges=\u0412\u0456\u0434\u043f\u0440\u0430\u0432\u0438\u0442\u0438 \u0437\u043c\u0456\u043d\u0438
@@ -9,23 +9,29 @@ button.logOut=\u0412\u0438\u0439\u0442\u0438
 button.edit=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
 button.addTest=\u0414\u043e\u0434\u0430\u0442\u0438 \u0442\u0435\u0441\u0442
 button.editTest=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
-button.deleteTest=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
+button.delete=\u0412\u0438\u0434\u0430\u043b\u0438\u0442\u0438
 button.submit=\u0412\u0456\u0434\u043f\u0440\u0430\u0432\u0438\u0442\u0438
 
-registration-form.signIn.label=\u0412\u0445\u0456\u0434
-registration-form.signUp.label=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f
-registration-form.login.label=\u041b\u043e\u0433\u0456\u043d
-registration-form.login.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043b\u043e\u0433\u0456\u043d
-registration-form.password.label=\u041f\u0430\u0440\u043e\u043b\u044c
-registration-form.password.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0430\u0440\u043e\u043b\u044c
-registration-form.name.label=\u0406\u043c\u0027\u044f
-registration-form.name.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0456\u043c\u0027\u044f
-registration-form.surname.label=\u041f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-registration-form.surname.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
-registration-form.email.label=\u041f\u043e\u0448\u0442\u0430
-registration-form.email.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u043e\u0448\u0442\u0443
-registration-form.logIn.button=\u0423\u0432\u0456\u0439\u0442\u0438
-registration-form.signUp.button=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044c
+validation.fillThisField=\u0417\u0430\u043f\u043e\u0432\u043d\u0456\u0442\u044c \u043f\u043e\u043b\u0435
+validation.noSuchUser=\u041d\u0435\u043c\u0430 \u0442\u0430\u043a\u043e\u0433\u043e \u043a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430
+validation.signUpSuccess=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f \u043f\u0440\u043e\u0439\u0448\u043b\u0430 \u0443\u0441\u043f\u0456\u0448\u043d\u043e\u002e \u0423\u0432\u0456\u0439\u0434\u0456\u0442\u044c
+validation.loginAlreadyInUser=\u041b\u043e\u0433\u0456\u043d \u0432\u0436\u0435 \u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f
+validation.badEmail=\u041d\u0435\u043a\u043e\u0440\u0435\u043a\u0442\u043d\u0438\u0439 \u0444\u043e\u0440\u043c\u0430\u0442 \u043f\u043e\u0448\u0442\u0438
+
+registrationForm.signIn.label=\u0412\u0445\u0456\u0434
+registrationForm.signUp.label=\u0420\u0435\u0454\u0441\u0442\u0440\u0430\u0446\u0456\u044f
+registrationForm.login.label=\u041b\u043e\u0433\u0456\u043d
+registrationForm.login.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043b\u043e\u0433\u0456\u043d
+registrationForm.password.label=\u041f\u0430\u0440\u043e\u043b\u044c
+registrationForm.password.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0430\u0440\u043e\u043b\u044c
+registrationForm.name.label=\u0406\u043c\u0027\u044f
+registrationForm.name.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0456\u043c\u0027\u044f
+registrationForm.surname.label=\u041f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+registrationForm.surname.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0440\u0456\u0437\u0432\u0438\u0449\u0435
+registrationForm.email.label=\u041f\u043e\u0448\u0442\u0430
+registrationForm.email.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u043e\u0448\u0442\u0443
+registrationForm.logIn.button=\u0423\u0432\u0456\u0439\u0442\u0438
+registrationForm.signUp.button=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044c
 
 profile.label=\u041f\u0440\u043e\u0444\u0456\u043b\u044c
 
@@ -33,14 +39,14 @@ tab.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 tab.tests=\u0422\u0435\u0441\u0442\u0438
 tab.passedTests=\u0421\u043a\u043b\u0430\u0434\u0435\u043d\u0456 \u0442\u0435\u0441\u0442\u0438
 
-user-main.sortBy.label=\u0421\u043e\u0440\u0442\u0443\u0432\u0430\u0442\u0438 \u0437\u0430
-user-main.sortBy.name=\u0406\u043c\u0027\u044f\u043c
-user-main.sortBy.difficulty=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044e
-user-main.sortBy.numOfQuestions=\u041a\u002d\u0442\u044e \u043f\u0438\u0442\u0430\u043d\u044c
-user-main.onPartSubj.label=\u0413\u0440\u0443\u043f\u0443\u0432\u0430\u0442\u0438 \u0437\u0430 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u043e\u043c
+userMain.sortBy.label=\u0421\u043e\u0440\u0442\u0443\u0432\u0430\u0442\u0438 \u0437\u0430
+userMain.sortBy.name=\u0406\u043c\u0027\u044f\u043c
+userMain.sortBy.difficulty=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044e
+userMain.sortBy.numOfQuestions=\u041a\u002d\u0442\u044e \u043f\u0438\u0442\u0430\u043d\u044c
+userMain.onPartSubj.label=\u0413\u0440\u0443\u043f\u0443\u0432\u0430\u0442\u0438 \u0437\u0430 \u043f\u0440\u0435\u0434\u043c\u0435\u0442\u043e\u043c
 
-test-card.subject.label=\u041f\u0440\u0435\u0434\u043c\u0435\u0442
-test-card.subject.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0440\u0435\u0434\u043c\u0435\u0442
+testCard.subject.label=\u041f\u0440\u0435\u0434\u043c\u0435\u0442
+testCard.subject.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0440\u0435\u0434\u043c\u0435\u0442
 testCard.difficulty.label=\u0421\u043a\u043b\u0430\u0434\u043d\u0456\u0441\u0442\u044c
 testCard.duration.label=\u0422\u0440\u0438\u0432\u0430\u043b\u0456\u0441\u0442\u044c
 testCard.numOfQuest.label=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044c
@@ -56,22 +62,31 @@ testCard.difficulty.easy=\u043d\u0438\u0437\u044c\u043a\u0430
 testCard.difficulty.medium=\u0441\u0435\u0440\u0435\u0434\u043d\u044f
 testCard.difficulty.hard=\u0432\u0438\u0441\u043e\u043a\u0430
 
-test-passing.button.endAttempt=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
-test-passing.button.allTests=\u0412\u0441\u0456 \u0442\u0435\u0441\u0442\u0438
-test-passing.question.label=\u041f\u0438\u0442\u0430\u043d\u043d\u044f
+testPassing.button.endAttempt=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
+testPassing.button.allTests=\u0412\u0441\u0456 \u0442\u0435\u0441\u0442\u0438
+testPassing.question.label=\u041f\u0438\u0442\u0430\u043d\u043d\u044f
 
-user-card.role.label=\u0420\u043e\u043b\u044c
-user-card.status.label=\u0421\u0442\u0430\u0442\u0443\u0441
-user-card.editUser.button=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
-user-card.block.button=\u0417\u0430\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
-user-card.unblock.button=\u0420\u043e\u0437\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
-user-card.role.client=\u043a\u043b\u0456\u0454\u043d\u0442
-user-card.role.admin=\u0430\u0434\u043c\u0456\u043d\u0456\u0441\u0442\u0440\u0430\u0442\u043e\u0440
-user-card.status.active=\u0430\u043a\u0442\u0438\u0432\u043d\u0438\u0439
-user-card.status.blocked=\u0437\u0430\u0431\u043b\u043e\u043a\u043e\u0432\u0430\u043d\u0438\u0439
+userCard.role.label=\u0420\u043e\u043b\u044c
+userCard.status.label=\u0421\u0442\u0430\u0442\u0443\u0441
+userCard.editUser.button=\u0420\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u0442\u0438
+userCard.block.button=\u0417\u0430\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
+userCard.unblock.button=\u0420\u043e\u0437\u0431\u043b\u043e\u043a\u0443\u0432\u0430\u0442\u0438
+userCard.role.client=\u043a\u043b\u0456\u0454\u043d\u0442
+userCard.role.admin=\u0430\u0434\u043c\u0456\u043d\u0456\u0441\u0442\u0440\u0430\u0442\u043e\u0440
+userCard.status.active=\u0430\u043a\u0442\u0438\u0432\u043d\u0438\u0439
+userCard.status.blocked=\u0437\u0430\u0431\u043b\u043e\u043a\u043e\u0432\u0430\u043d\u0438\u0439
 
-add-test.addAmountOfQuestions=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u0437\u0430\u043f\u0438\u0442\u0430\u043d\u044c\u002c \u044f\u043a\u0443 \u0432\u0438 \u0445\u043e\u0447\u0435\u0442\u0435 \u0434\u043e\u0434\u0430\u0442\u0438
+addTest.addAmountOfQuestions=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u0437\u0430\u043f\u0438\u0442\u0430\u043d\u044c\u002c \u044f\u043a\u0443 \u0432\u0438 \u0445\u043e\u0447\u0435\u0442\u0435 \u0434\u043e\u0434\u0430\u0442\u0438
+addTest.enterTestInfo.label=\u0411\u0443\u0434\u044c \u043b\u0430\u0441\u043a\u0430\u002c \u0432\u0432\u0435\u0434\u0456\u0442\u044c \u0456\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0456\u044e \u043f\u0440\u043e \u0442\u0435\u0441\u0442
 
-add-questions.answers.label=\u0412\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456
-add-questions.question.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044f
-add-questions.answer.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u044c
+addQuestions.answers.label=\u0412\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456
+addQuestions.question.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u043d\u044f
+addQuestions.answer.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u044c
+addQuestions.grade.label=\u041e\u0446\u0456\u043d\u043a\u0430
+
+testInfo.label=\u0406\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0456\u044f \u043f\u0440\u043e \u0442\u0435\u0441\u0442
+testInfo.amountOfQuestionsInTheTest=\u041a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c \u043f\u0438\u0442\u0430\u043d\u044c \u0432 \u0442\u0435\u0441\u0442\u0456
+testInfo.text.label=\u0422\u0435\u043a\u0441\u0442
+testInfo.maxScore.label=\u041c\u0430\u043a\u0441\u0438\u043c\u0430\u043b\u044c\u043d\u0430 \u043e\u0446\u0456\u043d\u043a\u0430
+testInfo.addQuestions.button=\u0414\u043e\u0434\u0430\u0442\u0438 \u043f\u0438\u0442\u0430\u043d\u043d\u044f
+testInfo.questions.label=\u041f\u0438\u0442\u0430\u043d\u043d\u044f
