--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -1,7 +1,7 @@
 lang=ENG
 
 mainPage.content=Testing platform
-button.signIn=Sign in
+button.signIn=Log in
 button.signUp=Sign up
 button.submitChanges=Submit changes
 button.back=Back
