--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -77,7 +77,7 @@ userCard.status.active=active
 userCard.status.blocked=blocked
 
 addTest.addAmountOfQuestions=Amount of questions you would like to add
-addTest.enterTestInfo.label=Please enter test info
+addTest.enterTestInfo.label=Enter test information
 
 addQuestions.answers.label=Answers
 addQuestions.question.placeholder=Write your question
@@ -90,6 +90,8 @@ testInfo.text.label=Text
 testInfo.maxScore.label=Max score
 testInfo.addQuestions.button=Add questions
 testInfo.questions.label=Questions
+
+userInfo.label=User
 
 
 
