avatar added, and needed functionality

--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -32,6 +32,8 @@ registrationForm.email.label=Email
 registrationForm.email.placeholder=Enter email
 registrationForm.logIn.button=Log in
 registrationForm.signUp.button=Sign up
+registrationForm.dontHaveAnAccount.label=Don't have an account?
+registrationForm.haveAlreadyAnAccount.label=Have already an account?
 
 profile.label=Profile
 
@@ -61,6 +63,7 @@ testCard.minutes=min
 testCard.difficulty.easy=easy
 testCard.difficulty.medium=medium
 testCard.difficulty.hard=hard
+testCard.checkOutAnswers.label=Check out answers
 
 testPassing.button.endAttempt=End the attempt
 testPassing.button.allTests=All tests
