--- a/src/main/resources/locales_ua.properties
+++ b/src/main/resources/locales_ua.properties
@@ -32,12 +32,14 @@ registrationForm.email.label=\u041f\u043e\u0448\u0442\u0430
 registrationForm.email.placeholder=\u0412\u0432\u0435\u0434\u0456\u0442\u044c \u043f\u043e\u0448\u0442\u0443
 registrationForm.logIn.button=\u0423\u0432\u0456\u0439\u0442\u0438
 registrationForm.signUp.button=\u0417\u0430\u0440\u0435\u0454\u0441\u0442\u0440\u0443\u0432\u0430\u0442\u0438\u0441\u044c
+registrationForm.dontHaveAnAccount.label=\u041d\u0435 \u043c\u0430\u0454\u0442\u0435 \u043e\u0431\u043b\u0456\u043a\u043e\u0432\u043e\u0433\u043e \u0437\u0430\u043f\u0438\u0441\u0443\u003f
+registrationForm.haveAlreadyAnAccount.label=\u041c\u0430\u0454\u0442\u0435 \u043e\u0431\u043b\u0456\u043a\u043e\u0432\u0438\u0439 \u0437\u0430\u043f\u0438\u0441\u003f
 
 profile.label=\u041f\u0440\u043e\u0444\u0456\u043b\u044c
 
 tab.users=\u041a\u043e\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0456
 tab.tests=\u0422\u0435\u0441\u0442\u0438
-tab.passedTests=\u0421\u043a\u043b\u0430\u0434\u0435\u043d\u0456 \u0442\u0435\u0441\u0442\u0438
+tab.passedTests=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0456 \u0442\u0435\u0441\u0442\u0438
 
 userMain.sortBy.label=\u0421\u043e\u0440\u0442\u0443\u0432\u0430\u0442\u0438 \u0437\u0430
 userMain.sortBy.name=\u0406\u043c\u0027\u044f\u043c
@@ -61,6 +63,7 @@ testCard.minutes=\u0445\u0432
 testCard.difficulty.easy=\u043d\u0438\u0437\u044c\u043a\u0430
 testCard.difficulty.medium=\u0441\u0435\u0440\u0435\u0434\u043d\u044f
 testCard.difficulty.hard=\u0432\u0438\u0441\u043e\u043a\u0430
+testCard.checkOutAnswers.label=\u041f\u0435\u0440\u0435\u0433\u043b\u044f\u043d\u0443\u0442\u0438 \u0432\u0456\u0434\u043f\u043e\u0432\u0456\u0434\u0456
 
 testPassing.button.endAttempt=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0438 \u0441\u043f\u0440\u043e\u0431\u0443
 testPassing.button.allTests=\u0412\u0441\u0456 \u0442\u0435\u0441\u0442\u0438
