--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -34,8 +34,22 @@ registrationForm.logIn.button=Log in
 registrationForm.signUp.button=Sign up
 registrationForm.dontHaveAnAccount.label=Don't have an account?
 registrationForm.haveAlreadyAnAccount.label=Have already an account?
+registrationForm.forgotPassword.label=Forgot your password?
+registrationForm.reset.button=Reset
+
+forgotPasswordForm.label=Forgot password?
+forgotPasswordForm.text=We'll send you an email with a link to reset your password.
+forgotPasswordForm.sendEmail.button=Send email
+forgotPasswordForm.success.label=Email sent successfully
+forgotPasswordForm.fail.label=Failed to send email
+
+resetPassword.label=Reset password
+resetPassword.newPassword.label=New password
+resetPassword.confirmPassword.label=Confirm password
+resetPassword.changePassword.button=Reset
 
 profile.label=Profile
+profile.resetAvatar.button=Reset avatar
 
 tab.users=Users
 tab.tests=Tests
