updated password functionality added

--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -46,7 +46,8 @@ forgotPasswordForm.fail.label=Failed to send email
 resetPassword.label=Reset password
 resetPassword.newPassword.label=New password
 resetPassword.confirmPassword.label=Confirm password
-resetPassword.changePassword.button=Reset
+resetPassword.successFeedback=Password update success
+resetPassword.faultFeedback=Failed to update password
 
 profile.label=Profile
 profile.resetAvatar.button=Reset avatar
