--- a/src/main/resources/locales_ua.properties
+++ b/src/main/resources/locales_ua.properties
@@ -46,7 +46,8 @@ forgotPasswordForm.fail.label=\u041d\u0435 \u0432\u0434\u0430\u043b\u043e\u0441\
 resetPassword.label=\u0421\u043a\u0438\u043d\u0443\u0442\u0438 \u043f\u0430\u0440\u043e\u043b\u044c
 resetPassword.newPassword.label=\u041d\u043e\u0432\u0438\u0439 \u043f\u0430\u0440\u043e\u043b\u044c
 resetPassword.confirmPassword.label=\u041f\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0456\u0442\u044c \u043f\u0430\u0440\u043e\u043b\u044c
-resetPassword.changePassword.button=\u0421\u043a\u0438\u043d\u0443\u0442\u0438
+resetPassword.successFeedback=\u041f\u0430\u0440\u043e\u043b\u044c \u0443\u0441\u043f\u0456\u0448\u043d\u043e \u043e\u043d\u043e\u0432\u043b\u0435\u043d\u043e
+resetPassword.faultFeedback=\u041d\u0435 \u0432\u0434\u0430\u043b\u043e\u0441\u044f \u043e\u043d\u043e\u0432\u0438\u0442\u0438 \u043f\u0430\u0440\u043e\u043b\u044c\u002c \u0441\u043f\u0440\u043e\u0431\u0443\u0439\u0442\u0435 \u0449\u0435 \u0440\u0430\u0437
 
 profile.label=\u041f\u0440\u043e\u0444\u0456\u043b\u044c
 profile.resetAvatar.button=\u0421\u043a\u0438\u043d\u0443\u0442\u0438 \u0444\u043e\u0442\u043e
