--- a/src/main/resources/locales_en.properties
+++ b/src/main/resources/locales_en.properties
@@ -17,6 +17,7 @@ validation.noSuchUser=No such user
 validation.signUpSuccess=Sign up success. Sign in
 validation.loginAlreadyInUser=Login already in use
 validation.badEmail=Bad email format
+validation.captcha.notVerified=Could not verify that you are not a robot
 
 registrationForm.signIn.label=Sign in
 registrationForm.signUp.label=Sign up
@@ -36,6 +37,8 @@ registrationForm.dontHaveAnAccount.label=Don't have an account?
 registrationForm.haveAlreadyAnAccount.label=Have already an account?
 registrationForm.forgotPassword.label=Forgot your password?
 registrationForm.reset.button=Reset
+
+
 
 forgotPasswordForm.label=Forgot password?
 forgotPasswordForm.text=We'll send you an email with a link to reset your password.
